--- a/html/admin.html
+++ b/html/admin.html
@@ -39,6 +39,7 @@
         <button  onclick="location.href='../index.html'">Home</button>
         <button  onclick="location.href='../html/staff.html'">Staff</button>
         <button  onclick="location.href='../html/collections.html'">Collections</button>
+        <button onclick="location.href='../html/shop.html'">Shop</button>
 
       </nav>
       
@@ -46,9 +47,9 @@
 
     <div id="sub-nav">
         <nav>
-            <button onclick="location.href='../html/archaeology.html'">Archaeology</button>
-            <button onclick="location.href='../html/anthropology.html'">Anthropology</button>
-            <button onclick="location.href='../html/history.html'">Histories</button>
+            <button onclick="location.href='../html/collections.html'">Archaeology</button>
+            <button onclick="location.href='../html/collections.html'">Anthropology</button>
+            <button onclick="location.href='../html/collections.html'">Histories</button>
         </nav>
     </div>
 
