--- a/html/collections.html
+++ b/html/collections.html
@@ -65,7 +65,8 @@
         <button  onclick="location.href='../index.html'">Home</button>
         <button  onclick="location.href='../html/staff.html'">Staff</button>
         <button  onclick="showSection('archaeology')">Collections</button>
-        <button onclick="location.href='admin.html'">Login</button>
+        <button onclick="location.href='../html/shop.html'">Shop</button>
+        <button onclick="location.href='../html/admin.html'">Login</button>
 
       </nav>
       
@@ -122,7 +123,7 @@
     
       <div class="collection-item">
 
-        <h3>Iron Wheel Beering</h3>
+        <h3>Iron Wheel Bearing</h3>
         <hr>
 
         <div class="images">
