--- a/html/staff.html
+++ b/html/staff.html
@@ -31,6 +31,7 @@
         <button  onclick="location.href='../index.html'">Home</button>
         <button  onclick="location.href='../html/staff.html'">Staff</button>
         <button  onclick="location.href='../html/collections.html'">Collections</button>
+        <button onclick="location.href='../html/shop.html'">Shop</button>
 
       </nav>
       
