--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         
         <button onclick="location.href='html/staff.html'">Staff</button>
         <button onclick="location.href='html/collections.html'">Collections</button>
+        <button onclick="location.href='html/shop.html'">Shop</button>
 
       </nav>
       
