Move js to script.js

--- a/html/shop.html
+++ b/html/shop.html
@@ -63,7 +63,7 @@
         <button  onclick="location.href='../html/staff.html'">Staff</button>
         <button  onclick="location.href='../html/collections.html'">Collections</button>
         <button onclick="location.href='../html/shop.html'">Shop</button>
-        <button onclick="location.href='cart.html'" id="viewCartBtn">View Cart</button> 
+        <button onclick="location.href='../html/cart.html'" id="viewCartBtn">View Cart</button> 
 
       </nav>
       <p>The content in this shop was entirely created by AI under human direction. It was then curated, reviewed, and edited by a human before being published.</p>
